norikra: update README.md